--- a/package.json
+++ b/package.json
@@ -1,9 +1,27 @@
 {
+  "name": "pendrive-inventory-manager-front-end",
+  "version": "1.0.0",
+  "description": "Project #1: A pendrive inventory manager that uses the Web Experience Toolkit and consumes a RESTful API.",
+  "main": "server.js",
+  "directories": {
+    "test": "test"
+  },
+  "scripts": {
+    "test": "mocha --exit"
+  },
+  "author": "Tim Xia",
+  "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.2",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "ejs": "^3.1.9",
     "express": "^4.18.2"
+  },
+  "devDependencies": {
+    "chai-http": "^4.4.0",
+    "chai": "^4.3.7",
+    "mocha": "^10.2.0",
+    "supertest": "^6.3.3"
   }
 }
